# m3u8_download

./: .gitignore  Cargo.toml  IMPROVEMENTS.md  OPTIMIZATION.md  README.md  USAGE.md  m3u8-downloader.user.js
.cargo/: config.toml
.reasonix/semantic/: index.jsonl  index.meta.json
data/: settings.json  tasks.json
docs/: 01-使用教程.md  02-技术实现解析.md  03-常见问题解答.md
simple-m3u8-extension/: README.md  background.js  content.js  manifest.json
src/: config.rs  error.rs  main.rs  validation.rs
src/downloader/: encryption.rs  mod.rs  mod_new.rs  segment.rs
src/server/: handlers.rs  mod.rs  state.rs
src/utils/: common.rs  download_segment.rs  file.rs  json_loader.rs  logger.rs  mod.rs  parse_m3u8.rs
static/: index.html  settings.html
