[package]
name = "m3u8_downloader"
version = "1.0.0"
edition = "2024"
description = "M3U8 多线程下载器 - 基于 cat-catch 扩展逻辑"
authors = ["M3U8 Downloader"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["stream"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
m3u8-rs = "6.0"
url = "2.0"
futures = "0.3"
anyhow = "1.0"
aes = "0.8"
cbc = "0.1"
log = "0.4.29"
log4rs = "1.4.0"
nu-ansi-term = "0.50.3"
chrono = { version = "0.4.43", features = ["serde"] }
thiserror = "2.0.18"
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = "8.0"
mime_guess = "2.0"
uuid = { version = "1.0", features = ["v4"] }
